# msfs2024-vfrnav-efb-installer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: .env.development  build.ts  index.html  package.json
app/src/: env.d.ts  main.tsx
app/src/App/: App.tsx
app/src/Utils/: Select.tsx
cmake/: dependencies.cmake  win32_executable.cmake
cmake/patches/: boost.patch
installer/: CMakeLists.txt  Main.h  Resources.h  main.cpp  main.rc
installer/Bindings/: abort.cpp  exists.cpp  validate.cpp
installer/Registry/: Run.h
installer/Wrapper/: CMakeLists.txt  Resources.h  main.cpp  main.rc
installer/app/: .env.production  CMakeLists.txt  build.ts  tsconfig.json
installer/app/src/: env.d.ts  global.css  main.tsx
installer/app/src/App/: App.tsx  Body.tsx  Popup.tsx
installer/window/windows/: FileDialog.cpp
packager/: CMakeLists.txt  main.cpp
packager/cmake/: package.cmake
registry/: CMakeLists.txt  empty.cpp
registry/Registry/: Install.h
server/: CMakeLists.txt  Main.h  Resources.h  main.cpp
server/Bindings/: log.cpp  openFolder.cpp  parentExists.cpp
server/Registry/: AlxHome.h  Settings.h
server/app/: CMakeLists.txt  build.ts
server/app/src/: env.d.ts
server/app/src/App/: App.tsx  Popup.tsx
server/window/: FileDialog.h
src/: CMakeLists.txt  Resources.h  json_test.cpp  main.cpp  promise_test.cpp
src/Bindings/: defaultInstallPath.cpp  findCommunity.cpp  openFile.cpp  validate.cpp
src/Registry/: AlxHome.h  Install.h  Registry.h  Settings.h
